# lichtgefecht

./: Makefile  README.md  format.sh
.githook/: pre-commit
api/: lg.proto  what.proto
components/bar/: CMakeLists.txt  bar.c
components/codec/: .gitignore  CMakeLists.txt  codec.c  codecTest.c
components/codec/include/: codec.h
components/com/: CMakeLists.txt  com.c
components/diag/: CMakeLists.txt  diag.c  idf_component.yml
components/foo/: CMakeLists.txt  foo.c  idf_component.yml
components/lg_api/: .gitignore  CMakeLists.txt  README.md
components/peripherals/: CMakeLists.txt  Kconfig.projbuild  peripherals.c
components/remote/: CMakeLists.txt  remote.c  remote_decoder.c  remote_decoder.h  remote_encoder.c  remote_encoder.h
components/trigger/: CMakeLists.txt  trigger.c
reflector/: Cargo.toml  README.md  Reflector.toml
reflector/reflector/: Cargo.toml  build.rs
reflector/reflector-api/: Cargo.toml
reflector/reflector-bin/: Cargo.toml
reflector/reflector-cli/: Cargo.toml
reflector/reflector-core/: Cargo.toml
reflector/reflector-macros/: Cargo.toml
reflector/reflector/src/: config.rs  lib.rs  main.rs  tokio_tools.rs
reflector/reflector/src/codec/: mod.rs
reflector/reflector/src/transport/: mod.rs  udp2.rs
reflector/reflector/src/transport/udp/: mod.rs  udp_transport.rs
reflector/reflector/tests/: pb_integration_test.rs
tagger/: .gitignore  CMakeLists.txt  Makefile  sdkconfig.platform
tagger/include/: tagger.h
tagger/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  msg_builder.c
(+30 files in other folders)
