[package]
name = "reflector"
version = "0.1.0"
edition = "2021"

[dependencies]

reflector-core = {path = "../reflector-core"}
reflector-api = {path = "../reflector-api"}

env_logger = "0.11.6"
tokio = { version = "1.42.0", features = ["full"] }
log = "0.4.22"
tokio-util = "0.7.13"
futures = "0.3.31"
bytes = "1.9.0"
prost = "0.13.4"
prost-types = "0.13.4"
toml = "0.8.20"
serde = { version = "1.0.218", features = ["derive"] }

[build-dependencies]
prost-build = "0.13.4"
bindgen = "0.71.0"
